2013-10-14 - version 0.1:
   - Initial release on GitHub (a few functions still missing)
2013-11-15 - version 0.2:
    - Initial release on CRAN
2013-11-26 - version 0.2.1:
    - Added 'link' argument to updateStatus 
    - Fixed typos in documentation
    - Now getFriends returns also locale of friends
2013-12-10 - version 0.2.2:
    - Added 'getCheckins' function
    - Fixed error in parsing getPost output
    - Fixed error with getPost when n>200 and n<500
2013-12-21 - version 0.2.3:
    - Added 'getLikes' and 'getNewsfeed' functions
2013-12-30 - version 0.2.4:
    - 'getPost' now has separate n.likes and n.comments
2014-01-05 - version 0.3:
    - Updated documentation
    - CRAN release
2014-01-05 - version 0.3.1:
    - Fixed errors in getPost when existing likes are fewer than request
    - Fixed error in how likes are converted into a data frame
2014-02-07 - version 0.3.2:
    - Fixed errors in getPost when there few likes/comments
2014-02-20 - version 0.3.3:
    - Added searchPages function (thanks Joel Gombin!)
2014-03-11 - version 0.3.4:
    - Now compatible with httr 0.3
2014-04-02 - version 0.4.0:
    - Added function to execute FQL queries
2014-12-26 - version 0.5.0:
    - All functions now compatible with API v2.x
    - GetPage now has date search options
    - Fixed minor bugs in multiple functions (see github commits)
2015-04-15 - version 0.5.1:
    - Fixed bugs in getInsights
2015-08-04 - version 0.5.2:
    - Added searchGroup and getGroup functions
    - minor fixes to comply with new CRAN rules